# peclet

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: containers.yml  release.yml  site.yml
benchmarks/: README.md  profile_mpi_flow.py
cmake/: SuiteArborX.cmake  SuiteKokkos.cmake  SuiteNanobind.cmake
containers/: README.md  cpu.def  cuda.def  hip.def  lumi-run.sh  snellius-run.sh  tue-run.sh
containers/submit/: lumi.slurm  snellius.slurm  tue-smm.slurm
coupling/: CMakeLists.txt  README.md
coupling/python/peclet_coupling/: __init__.py  driver.py
coupling/tests/: test_terminal_velocity.py
docs/: AMR.md  ARCHITECTURE.md  CONVENTIONS.md  CUDA_RETIREMENT.md  DEPLOYMENT.md  DEVICE_RESIDENCY_PLAN.md  DOC_CI_WORK_NOTES.md  INTERFACES.md  MULTIPHYSICS_PLAN.md  PORTABILITY.md  ROADMAP.md  STYLE.md  containers.md  index.md  peclet_cuda_wheel_prototype.md
docs/python/: core.md  dem.md  flow.md  index.md  morton.md  voro.md
docs/studies/: staggered_vs_colocated.md
tools/: bootstrap_deps.sh  gen_python_api.py
tools/arborx_smoke/: CMakeLists.txt  main.cpp
tools/kokkos_smoke/: CMakeLists.txt  main.cpp
